--- a/app/src/main/res/layout/activity_crop_irrigation_manager.xml
+++ b/app/src/main/res/layout/activity_crop_irrigation_manager.xml
@@ -35,7 +35,7 @@
                         android:text="@string/operation_date"
                         android:textColor="@color/textColor"
                         android:layout_marginBottom="4dp"
-                        android:textSize="16sp" />
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_irrigation_operation_date"
@@ -61,7 +61,7 @@
                     android:text="@string/irrigation_system_rate"
                     android:textColor="@color/textColor"
                     android:layout_marginBottom="4dp"
-                    android:textSize="16sp" />
+                    android:textSize="15sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -90,6 +90,7 @@
                         android:layout_height="match_parent"
                         android:padding="4dp"
                         android:text="ltrs/hr"
+                        android:textColor="@color/colorPrimary"
                         android:layout_weight="0.8"
                         android:textAlignment="center"
                         android:background="@drawable/input_shapes_grey_units_right"
@@ -120,7 +121,7 @@
                         android:text="@string/start_time"
                         android:textColor="@color/textColor"
                         android:layout_marginBottom="4dp"
-                        android:textSize="16sp" />
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_irrigation_start_time"
@@ -146,7 +147,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/end_time"
                         android:textColor="@color/textColor"
-                        android:textSize="16sp"
+                        android:textSize="15sp"
                         android:layout_marginBottom="4dp" />
 
                     <EditText
@@ -179,7 +180,7 @@
                         android:text="@string/total_water_quantity"
                         android:textColor="@color/textColor"
                         android:layout_marginBottom="4dp"
-                        android:textSize="16sp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/txt_crop_irrigation_total_water_quantity"
@@ -208,7 +209,7 @@
                     android:text="@string/area_irrigated"
                     android:textColor="@color/textColor"
                     android:layout_marginBottom="4dp"
-                    android:textSize="16sp" />
+                    android:textSize="15sp" />
                         <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
@@ -236,6 +237,7 @@
                                 android:layout_height="match_parent"
                                 android:padding="4dp"
                                 android:text="acres"
+                                android:textColor="@color/colorPrimary"
                                 android:layout_weight="0.8"
                                 android:textAlignment="center"
                                 android:background="@drawable/input_shapes_grey_units_right"
@@ -261,7 +263,7 @@
                     android:text="@string/quantity"
                     android:textColor="@color/textColor"
                     android:layout_marginBottom="4dp"
-                    android:textSize="16sp" />
+                    android:textSize="15sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -289,6 +291,7 @@
                         android:layout_height="match_parent"
                         android:padding="4dp"
                         android:text="/ acres"
+                        android:textColor="@color/colorPrimary"
                         android:layout_weight="0.8"
                         android:background="@drawable/input_shapes_grey_units_right"
                         android:textAlignment="center"
@@ -312,7 +315,7 @@
                     android:text="@string/total_cost"
                     android:textColor="@color/textColor"
                     android:layout_marginBottom="4dp"
-                    android:textSize="16sp" />
+                    android:textSize="15sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -323,12 +326,13 @@
                     >
 
                     <TextView
-                        android:id="@+id/crop_cost"
+                        android:id="@+id/txt_crop_irrigation_currency"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="@string/ugx"
                         android:layout_weight="0.2"
                         android:textSize="14sp"
+                        android:textColor="@color/colorPrimary"
                         android:textAlignment="center"
                         android:background="@drawable/input_shapes_grey_units"
                         android:gravity="center_vertical"
@@ -371,7 +375,7 @@
                         android:text="@string/recurrence"
                         android:textColor="@color/textColor"
                         android:layout_marginBottom="4dp"
-                        android:textSize="16sp" />
+                        android:textSize="15sp" />
 
                  <LinearLayout
                      android:layout_width="match_parent"
@@ -399,7 +403,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/reminders"
                         android:textColor="@color/textColor"
-                        android:textSize="16sp"
+                        android:textSize="15sp"
                         android:layout_marginBottom="4dp" />
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -440,7 +444,7 @@
                         android:layout_height="wrap_content"
                         android:text="Every"
                         android:textColor="@color/textColor"
-                        android:textSize="16sp"
+                        android:textSize="15sp"
                         android:layout_weight="0.3"/>
 
                     <LinearLayout
@@ -486,7 +490,7 @@
                         android:text="@string/repeat_until"
                         android:textColor="@color/textColor"
 
-                        android:textSize="16sp"
+                        android:textSize="15sp"
                         android:layout_weight="0.3"/>
 
                     <EditText
