--- a/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
+++ b/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
@@ -30,10 +30,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.3"
                 android:text="@string/analysis_date"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
-                />
+                android:textColor="@color/textColor"
+                android:textSize="15sp"
+                 />
 
             <EditText
                 android:id="@+id/txt_crop_soil_analysis_date"
@@ -61,7 +60,7 @@
             android:orientation="vertical"
 
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginEnd="20dp">
 
             <TextView
 
@@ -69,9 +68,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.6"
                 android:text="@string/soil_ph"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
+                android:textSize="15sp"
                 />
 
             <EditText
@@ -106,21 +104,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/organic_matter"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="15sp" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    android:background="@color/gray_mh"
+
                     >
 
                     <EditText
                         android:id="@+id/txt_crop_soil_analysis_organic_matter"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:background="@drawable/input_shapes"
                         android:layout_weight="0.8"
                         android:hint="Enter.."
@@ -133,13 +130,15 @@
                     <TextView
 
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="0.2"
                         android:textAlignment="center"
                         android:labelFor="@+id/txt_crop_soil_analysis_organic_matter"
                         android:text="%"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/colorPrimary"
+                        android:gravity="center"
+                        android:textSize="14sp"
+                        android:background="@drawable/input_shapes_grey_units_right" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -155,9 +154,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/agronomist"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
+                android:textSize="15sp"
                 />
 
             <EditText
@@ -180,31 +178,30 @@
             android:layout_marginBottom="10dp">
 
             <TextView
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cost"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
+                android:textSize="15sp"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:background="@color/gray_mh"
-                android:layout_marginBottom="10dp">
+
+                >
 
                 <TextView
-                    android:id="@+id/crop_cost"
+                    android:id="@+id/txt_crop_soil_analysis_currency"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="@string/ugx"
                     android:layout_weight="0.1"
                     android:textSize="14sp"
                     android:textAlignment="center"
-                    android:textStyle="bold"
+                    android:background="@drawable/input_shapes_grey_units"
+                    android:textColor="@color/colorPrimary"
                     android:gravity="center_vertical"
 
                     />
@@ -237,9 +234,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/results"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
+                android:textSize="15sp"
                 />
 
 
@@ -254,6 +250,7 @@
                 android:background="@drawable/input_shapes"
                 android:hint="Enter.."
                 android:gravity="start"
+                 android:textSize="14sp"
 
                 />
 
@@ -271,7 +268,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="20dp"
                 android:layout_weight="1">
 
                 <TextView
@@ -279,20 +276,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/recurrence"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-                    android:textSize="16sp" />
-
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner">
                 <Spinner
                     android:id="@+id/sp_crop_soil_analysis_recurrence"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:background="@drawable/input_shapes"
                     android:entries="@array/sp_crop_task_recurrence"
-                    android:textSize="14sp"
+
                     />
             </LinearLayout>
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -305,19 +305,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/reminders"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes_grey_spinner">
                 <Spinner
                     android:id="@+id/sp_crop_soil_analysis_reminders"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/input_shapes"
-                    android:textSize="14sp"
                     android:entries="@array/sp_crop_task_reminders"
                     />
-
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
@@ -325,6 +325,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:visibility="gone"
             >
 
@@ -333,7 +335,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_weight="1"
-                android:layout_margin="4dp"
+                android:layout_marginEnd="20dp"
                 android:gravity="center_vertical"
                 >
 
@@ -341,10 +343,9 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Every:"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:text="Every"
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"
                     android:layout_weight="0.3"/>
 
                 <LinearLayout
@@ -352,11 +353,11 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="0.7"
-                    android:background="@color/gray_mh">
+                    >
                     <EditText
                         android:id="@+id/txt_crop_soil_analysis_weekly_weeks"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:textColor="@color/black"
                         android:text="@string/default_numeric_value"
                         android:background="@drawable/input_shapes"
@@ -366,10 +367,12 @@
                     <TextView
 
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:text="Weeks"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/colorPrimary"
+                        android:background="@drawable/input_shapes_grey_units_right"
                         android:layout_weight="0.2"/>
                 </LinearLayout>
 
@@ -380,7 +383,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="4dp"
                 android:layout_weight="1">
 
                 <TextView
@@ -388,9 +390,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/repeat_until"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
+                    android:textColor="@color/textColor"
+                    android:textSize="15sp"
                     android:layout_weight="0.3"/>
 
                 <EditText
@@ -399,7 +400,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:hint="Select"
-                    android:background="@drawable/input_shapes"
+                    android:background="@drawable/input_shapes_grey_spinner"
                     android:inputType="none"
                     android:textSize="14sp"
                     android:layout_weight="0.7"/>
@@ -411,15 +412,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_margin="4dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1"
-            android:background="@color/gray_mh"
             android:visibility="gone"
+
             >
             <EditText
                 android:id="@+id/txt_crop_soil_analysis_days_before"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textColor="@color/black"
                 android:hint="Enter.."
                 android:background="@drawable/input_shapes"
@@ -432,11 +434,12 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="Days Before"
-                android:textStyle="bold"
-                android:textSize="16sp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
+                android:background="@drawable/input_shapes_grey_units_right"
                 android:layout_weight="0.3"/>
 
 
