--- a/app/src/main/res/layout/crop_cultivation_list_card.xml
+++ b/app/src/main/res/layout/crop_cultivation_list_card.xml
@@ -41,8 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
             android:orientation="vertical"
-            android:paddingBottom="10dp"
-            android:paddingRight="22dp"
+            android:paddingBottom="20dp"
+            android:paddingEnd="20dp"
             >
 
             <TextView
@@ -178,7 +178,10 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_margin="0dp"
-                    android:padding="4dp">
+                    android:paddingTop="4dp"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
+                    android:paddingBottom="15dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -202,7 +205,8 @@
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_margin="0dp"
-                  android:padding="4dp">
+                  android:padding="4dp"
+                  android:visibility="gone">
                   <TextView
                       android:id="@+id/txt_view_crop_cultivation_card_notes"
                       android:layout_width="match_parent"
@@ -215,8 +219,42 @@
               </LinearLayout>
 
           </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:orientation="horizontal"
+                android:gravity="end"
+                android:padding="0dp"
+                android:layout_marginEnd="8dp"
+                android:id="@+id/layout_crop_scouting_card_show_hide"
+                android:background="#B6C5B6"
+                >
 
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/img_crop_scouting_card_show_crops"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:backgroundTint="@color/black"
+                    android:textColor="#D2DDD5"
+                    android:layout_marginEnd="18.17dp"
+                    android:layout_marginTop="10dp"
+
+                    android:src="@drawable/arrow_drop_down" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/layout_crop_scouting_expand"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#B6C5B6"
+                android:layout_marginEnd="8dp"
+                android:padding="4dp"
+                android:visibility="gone"
+                >
+
+            </LinearLayout>
+            </LinearLayout>
+
     </LinearLayout>
 
 
