--- a/app/src/main/res/layout/crop_scouting_list_card.xml
+++ b/app/src/main/res/layout/crop_scouting_list_card.xml
@@ -56,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:background="@drawable/crop_card_border"
+                android:background="@drawable/input_shapes_card"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -214,40 +214,42 @@
                         android:textColor="#899889" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:orientation="horizontal"
-                    android:gravity="end"
-                    android:padding="0dp"
-                    android:layout_margin="0dp"
-                    android:id="@+id/layout_crop_scouting_card_show_hide"
-                    android:background="#B6C5B6"
-                    >
-
-                    <ImageView
-                        android:id="@+id/img_crop_scouting_card_show_crops"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:backgroundTint="@color/black"
-                        android:textColor="#D2DDD5"
-                        android:layout_marginRight="18.17dp"
-                        android:layout_marginTop="10dp"
-
-                        android:src="@drawable/arrow_drop_down" />
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/layout_crop_scouting_expand"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#B6C5B6"
-                    android:visibility="gone">
 
 
-                </LinearLayout>
+
+
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:orientation="horizontal"
+                android:gravity="end"
+                android:padding="0dp"
+                android:layout_marginEnd="8dp"
+                android:id="@+id/layout_crop_scouting_card_show_hide"
+                android:background="#B6C5B6"
+                >
 
+                <ImageView
+                    android:id="@+id/img_crop_scouting_card_show_crops"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:backgroundTint="@color/black"
+                    android:textColor="#D2DDD5"
+                    android:layout_marginRight="18.17dp"
+                    android:layout_marginTop="10dp"
+
+                    android:src="@drawable/arrow_drop_down" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/layout_crop_scouting_expand"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:background="#B6C5B6"
+                android:visibility="gone">
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
