--- a/app/src/main/res/layout/crop_soil_analysis_list_card.xml
+++ b/app/src/main/res/layout/crop_soil_analysis_list_card.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray">
+    android:background="#F4F4F4">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+
         >
 
         <LinearLayout
@@ -21,25 +18,20 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.9"
             android:orientation="vertical">
-            <View
-                android:layout_width="1dp"
-                android:layout_height="25dp"
-                android:textAlignment="center"
-                android:layout_marginStart="16dp"
-                android:background="@color/black" />
+
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/treatment_kit" />
+                android:src="@drawable/cultivation" />
 
             <View
                 android:id="@+id/txt_view_crop_soil_analysis_card_line"
                 android:layout_width="1dp"
-                android:layout_height="55dp"
-                android:textAlignment="center"
+                android:layout_height="135dp"
                 android:layout_marginStart="16dp"
-                android:background="@color/black" />
+                android:background="#E7EAE7"
+                 />
 
         </LinearLayout>
 
@@ -48,7 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
             android:orientation="vertical"
-            android:layout_marginEnd="8dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="20dp"
 
             >
 
@@ -56,23 +49,26 @@
                 android:id="@+id/txt_view_crop_soil_analysis_card_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="8dp"
                 android:text="20-08-2018"
-                android:textColor="@color/blackText" />
+                android:textSize="18sp"
+                android:textColor="#A6C0A7" />
 
             <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
-              android:background="@drawable/crop_card_border"
+              android:background="@drawable/input_shapes_card"
                 android:layout_marginEnd="8dp"
-              android:padding="4dp"
+              android:padding="20dp"
              >
 
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:orientation="horizontal">
+                  android:orientation="horizontal"
+                  android:layout_margin="2dp">
 
                   <LinearLayout
                       android:layout_width="wrap_content"
@@ -84,18 +80,18 @@
 
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:layout_weight="1.3"
+                          android:layout_weight="0.5"
                           android:text="Soil pH"
                           android:textColor="@color/blackText"
-                          android:textStyle="bold" />
+                          />
 
                       <TextView
                           android:id="@+id/txt_view_crop_soil_analysis_card_ph"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
-                          android:layout_weight="1.3"
-                          android:text="Oral Dose"
-                          android:textColor="@color/blackText" />
+                          android:layout_weight="0.6"
+                          android:text="50%"
+                          android:textColor="#899889" />
                   </LinearLayout>
 
                   <LinearLayout
@@ -113,14 +109,16 @@
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:orientation="horizontal">
+                  android:orientation="horizontal"
+                  android:layout_marginEnd="24dp"
+                  android:layout_marginBottom="8dp">
 
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:text="Organic Matter : "
-                      android:textStyle="bold"
+                      android:layout_weight="0.5"
+                      android:text="Organic Matter   "
+
                       android:textColor="@color/blackText"
                        />
 
@@ -128,21 +126,21 @@
                       android:id="@+id/txt_view_crop_soil_analysis_card_organic_matter"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:layout_weight="1"
+                      android:layout_weight="0.6"
                       android:text="50%"
-                      android:textColor="@color/blackText" />
+                      android:textColor="#899889" />
               </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginEnd="24dp">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Agronomist : "
-                        android:textStyle="bold"
+                        android:layout_weight="0.5"
+                        android:text="Agronomist  "
                         android:textColor="@color/blackText"
                         />
 
@@ -150,14 +148,15 @@
                         android:id="@+id/txt_view_crop_soil_analysis_card_agronomist"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.6"
                         android:text="50%"
-                        android:textColor="@color/blackText" />
+                        android:textColor="#899889" />
                 </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:orientation="vertical">
+                  android:orientation="vertical"
+                  android:visibility="gone">
 
                   <TextView
                       android:layout_width="match_parent"
@@ -178,9 +177,43 @@
               </LinearLayout>
 
           </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:orientation="horizontal"
+                android:gravity="end"
+                android:padding="0dp"
+                android:layout_marginEnd="8dp"
+                android:id="@+id/layout_crop_scouting_card_show_hide"
+                android:background="#B6C5B6"
+                >
 
+                <ImageView
+                    android:id="@+id/img_crop_scouting_card_show_crops"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:backgroundTint="@color/black"
+                    android:textColor="#D2DDD5"
+                    android:layout_marginEnd="18.17dp"
+                    android:layout_marginTop="10dp"
+
+                    android:src="@drawable/arrow_drop_down" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/layout_crop_scouting_expand"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#B6C5B6"
+                android:layout_marginEnd="8dp"
+                android:padding="4dp"
+                android:visibility="gone"
+                >
+
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
